--- a/index.html
+++ b/index.html
@@ -1,47 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>CRLauncher</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="An unofficial launcher for Cosmic Reach.">
-        <meta name="keywords" content="java, launcher, cosmicreach, swing, cosmic-reach">
 
-        <link rel="stylesheet" type="text/css" href="style.css">
+<head>
+    <title>CRLauncher</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="An unofficial launcher for Cosmic Reach.">
+    <meta name="keywords" content="java, launcher, cosmicreach, swing, cosmic-reach">
+    <link rel="shortcut icon" href="https://avatars.githubusercontent.com/u/163559235?s=48&v=4" type="image/x-icon">
 
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-        <script src="script.js" type="text/javascript"></script>
-    </head>
-    <body>
-        <div class="content">
-            <a target="_blank" href="https://github.com/CRLauncher/CRLauncher" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
-            <div class="noto-sans-font main-label">CRLauncher</div>
-            <div class="download-button">
-                <button class="noto-sans-font" onclick="downloadLauncher()">Download</button>
-                <a class="other-options noto-sans-font" href="https://github.com/CRLauncher/CRLauncher/releases/latest">Other files...</a>
+
+    <link rel="stylesheet" href="styles/reset.css">
+    <link rel="stylesheet" type="text/css" href="styles/styles.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
+    <script defer src="script.js" type="text/javascript"></script>
+</head>
+
+<body class="container">
+    <main class="hero-section">
+        <div class="hero__text-container">
+            <h1 class="hero__title text-gradient">
+                CRLauncher
+                <span class="muted-text">:</span> A <span class="">simple</span> and
+                <span class="">minimal</span>
+                launcher for
+                <a href="https://finalforeach.itch.io/cosmic-reach" class="underline">Cosmic Reach</a>
+            </h1>
+
+            <div class="hero__action-buttons">
+                <a class="hero__button hero__primary-action"
+                    href="https://github.com/CRLauncher/CRLauncher/releases/latest" download>
+                    Download
+                </a>
+                <a class="hero__button hero__secondary-action"
+                    href="https://github.com/CRLauncher/CRLauncher/releases/latest">Other files</a>
             </div>
-            <div class="description noto-sans-font">
-                <p>
-                    CRLauncher is a simple launcher for <a target="_blank" href="https://finalforeach.itch.io/cosmic-reach">Cosmic Reach</a>.
-                </p>
-                Features:
-                <ul>
-                    <li>Allows to download multiple versions of the game</li>
-                    <li>Supports multiple instances: each installation of the game is independent</li>
-                    <li>Supports multiple mod loaders: Fabric, Cosmic Quilt and Puzzle</li>
-                    <li>Supports jarmods</li>
-                    <li>Dark and light themes</li>
-                    <li>Accounts</li>
-                    <li>Auto-update</li>
-                    <li>Supports downloading mods & stuff from <a target="_blank" href="https://crmm.tech">CRMM</a></li>
-                </ul>
-            </div>
-            <div class="screenshots">
-                <img class="screenshot" src="Screenshot1.png" alt="main tab">
-                <img class="screenshot" src="Screenshot2.png" alt="settings tab">
+            <p class="muted-text hero__action-buttons-note">
+                Available for Windows, Linux and MacOS
+            </p>
+        </div>
+        <div class="hero__image-container">
+            <img class="hero__image" src="assets/Screenshot1.png" alt="CR Launcher">
+        </div>
+    </main>
+
+    <section class="features-section">
+        <div class="features__box">
+            <h2 class="features__title text-gradient">Features:</h2>
+            <ul class="features__list">
+                <li class="features__list-item">Allows to download multiple versions of the game</li>
+                <li class="features__list-item">Supports multiple instances: each installation of the game is
+                    independent</li>
+                <li class="features__list-item">Supports multiple mod loaders: Fabric, Cosmic Quilt and Puzzle</li>
+                <li class="features__list-item">Supports jarmods</li>
+                <li class="features__list-item">Dark and light themes</li>
+                <li class="features__list-item">Accounts</li>
+                <li class="features__list-item">Auto-update</li>
+                <li class="features__list-item">Supports downloading mods & stuff from
+                    <a class="underline" target="_blank" href="https://crmm.tech">CRMM</a>
+                </li>
+            </ul>
+
+            <div class="features__image-box">
+                <span class="muted-text">*Settings page</span>
+                <img src="assets/Screenshot2.png" alt="CRLauncher settings page">
             </div>
         </div>
-    </body>
+    </section>
+</body>
+
 </html>
